--- a/FollowMe/app/build.gradle
+++ b/FollowMe/app/build.gradle
@@ -85,6 +85,9 @@ dependencies {
     implementation 'com.android.support:cardview-v7:29.0.2'
     implementation "com.android.support:recyclerview-v7:$rootProject.recyclerview_version"
 
+    //horiziontalcalendar
+    implementation 'devs.mulham.horizontalcalendar:horizontalcalendar:1.3.4'
+
 
     //retrofit
     implementation 'com.google.code.gson:gson:2.8.6'
