--- a/Backend/recommendUpdate/package.json
+++ b/Backend/recommendUpdate/package.json
@@ -7,9 +7,11 @@
   },
   "dependencies": {
     "JSON": "^1.0.0",
+    "cookie-parser": "^1.4.5",
     "debug": "~2.6.3",
     "dotenv": "^8.2.0",
     "ejs": "~2.5.6",
+    "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "mysql2": "^2.1.0",
