--- a/Backend/search/build.gradle
+++ b/Backend/search/build.gradle
@@ -26,6 +26,10 @@ dependencies {
     implementation 'org.elasticsearch.client:elasticsearch-rest-high-level-client'
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'org.springframework.boot:spring-boot-starter-mustache'
+    compile 'io.jsonwebtoken:jjwt-api:0.11.2'
+    runtime 'io.jsonwebtoken:jjwt-impl:0.11.2',
+            'io.jsonwebtoken:jjwt-jackson:0.11.2' // or 'io.jsonwebtoken:jjwt-gson:0.11.2' for gson
+    implementation 'com.auth0:java-jwt:3.10.3'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
