--- a/Backend/search/src/main/resources/application.properties
+++ b/Backend/search/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.username=root
-spring.datasource.password=kwonjinwoo
+spring.datasource.password=root
 spring.datasource.url=jdbc:mysql://localhost:3306/capston?useUnicode=true&characterEncoding=utf-8&serverTimezone=UTC
 spring.jpa.database=mysql
 spring.jpa.show-sql=true
@@ -9,3 +9,4 @@ server.port = 8008
 elasticsearch.host=3.15.22.4
 elasticsearch.port=9200
 elasticsearch.schema=http
+secretKey=asdfSFS34wfsdfsdfSDSD32dfsddDDerQSNCK34SOWEK5354fdgdf4
