Api gateway filtering jwt Validation

--- a/Backend/Apigateway/src/main/resources/application.properties
+++ b/Backend/Apigateway/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+secretKey=asdfSFS34wfsdfsdfSDSD32dfsddDDerQSNCK34SOWEK5354fdgdf4
+server.port=8888
+zuul.routes.search.path=/search/**
+zuul.routes.search.url=http://localhost:8008/search
