--- a/Backend/Apigateway/build.gradle
+++ b/Backend/Apigateway/build.gradle
@@ -24,6 +24,8 @@ ext {
 
 dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-zuul'
+    implementation 'com.auth0:java-jwt:3.10.3'
+    implementation 'com.google.code.gson:gson:2.8.5'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
