change recommend port

--- a/Backend/Apigateway/src/main/resources/application.properties
+++ b/Backend/Apigateway/src/main/resources/application.properties
@@ -7,5 +7,5 @@ zuul.routes.course.url=http://localhost:3003/course
 zuul.routes.shop.path=/shop/**
 zuul.routes.shop.url=http://localhost:3002/shop
 zuul.routes.recommend.path=/recommend/**
-zuul.routes.recommend.url=http://localhost:3001/recommend
+zuul.routes.recommend.url=http://localhost:3001/
 zuul.sensitive-headers=Cookie,Set-Cookie
