--- a/Backend/Course/package.json
+++ b/Backend/Course/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "followmeserver",
+  "name": "courseapi",
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www"
+    "start": "node ./bin/www"
   },
   "dependencies": {
     "bcrypt": "^5.0.0",
@@ -18,6 +18,7 @@
     "express-session": "^1.17.1",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
     "mysql2": "^2.1.0",
     "nodemon": "^2.0.4",
     "passport": "^0.4.1",
